// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rule deprecated should contain contextual documentation 1`] = `
{
  "description": "The \`<center>\` element is deprecated and should not be used in new code.",
  "url": "https://html-validate.org/rules/deprecated.html",
}
`;

exports[`rule deprecated should contain contextual documentation 2`] = `
{
  "description": "The \`<blink>\` element is deprecated in HTML 5 and should not be used in new code.",
  "url": "https://html-validate.org/rules/deprecated.html",
}
`;

exports[`rule deprecated should contain contextual documentation 3`] = `
{
  "description": "The \`<blink>\` element is deprecated in HTML 4.1 and should not be used in new code.",
  "url": "https://html-validate.org/rules/deprecated.html",
}
`;

exports[`rule deprecated should contain contextual documentation 4`] = `
{
  "description": "The \`<blink>\` element is deprecated and should not be used in new code.

extra documentation for <blink>",
  "url": "https://html-validate.org/rules/deprecated.html",
}
`;

exports[`rule deprecated should contain documentation 1`] = `
{
  "description": "This element is deprecated and should not be used in new code.",
  "url": "https://html-validate.org/rules/deprecated.html",
}
`;

exports[`rule deprecated smoketest 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "test-files/rules/deprecated.html",
    "messages": [
      {
        "column": 2,
        "context": {
          "documentation": "Marked as obsolete by both W3C and WHATWG standards but still implemented in most browsers. Animated text should be avoided for accessibility reasons as well.",
          "source": "html5",
          "tagName": "marquee",
        },
        "line": 2,
        "message": "<marquee> is deprecated",
        "offset": 20,
        "ruleId": "deprecated",
        "ruleUrl": "https://html-validate.org/rules/deprecated.html",
        "selector": "marquee",
        "severity": 2,
        "size": 7,
      },
    ],
    "source": "<p>lorem ipsum</p>
<marquee>foobar</marquee>
",
    "warningCount": 0,
  },
]
`;
